# AI_Training

./: .gitignore  neural_net_work_chua_xong.py
Classification_gradient_self_coding/: config.py  dataloader.py  model.py  train.py
Week11_12_gpt2_generator_cpp/: CMakeLists.txt  Generator.cpp  Generator.h  Header.h  Tokenizer.cpp  Tokenizer.h  main.cpp  sample.json
Week11_12_gpt2_generator_cpp/src/: CMakeLists.txt  generator.cpp  generator.h  header.h  main.cpp  tokenizer.cpp  tokenizer.h
Week11_12_gpt2_generator_cpp/src_test/: CMakeLists.txt  test_generator.cpp
Week11_12_gpt2_generator_cpp/tokenizer/: tokenizer.txt
Week13_torchserve/: gpt2_handler.py  script.txt
Week1_2_ML_DL/: model_week1_2.py  sgd_classifier.py
Week1_2_ML_DL/Classification_gradient_self_coding/: config.py  dataloader.py  evaluate.py  model.py  script_test  test_code(nháp).py  traced_classification_gradient_self_coding.pt  train.py
Week3_4_NLP/NLP with Classification and Vector Spaces/Week1/: main.py  text.txt
Week3_4_NLP/RNN_Classification/: best_model  best_model.pth  best_model2.pth  dataloader.py  evalutate.py  model.py  preprocessing.py  test_code.py  train.py  word2vec.py
Week5_6_transformer/: dataloader.py  embedding.py  generator.py  model.py  preprocess.py  test_code.py  tokenizer.py  tokenizer.txt  train.py  trainer.py
Week5_6_transformer/pre_model/: pre_train_model.pth
Week5_6_transformer/pre_tokenizer/: pre_train_tokenizer.pkl  pre_train_tokenizer3.pkl  pre_train_tokenizer4.pkl
Week9_10_torchscript/: test.py
